# docs/swagger.yaml
@@ -91,6 +91,13 @@ definitions:
       data:
         $ref: '#/definitions/VEDA95_open_board_api_internal_auth.LocalUserLogin'
     type: object
+  VEDA95_open_board_api_internal_http_responses.OkResponse-VEDA95_open_board_api_internal_http_responses_GenericMessage:
+    properties:
+      code:
+        type: integer
+      data:
+        $ref: '#/definitions/VEDA95_open_board_api_internal_http_responses.GenericMessage'
+    type: object
   VEDA95_open_board_api_internal_http_validators.ErrorResponse:
     properties:
       err_value:
@@ -209,7 +216,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/VEDA95_open_board_api_internal_http_responses.OkResponse-VEDA95_open_board_api_internal_auth_LocalUserLogin'
+            $ref: '#/definitions/VEDA95_open_board_api_internal_http_responses.OkResponse-VEDA95_open_board_api_internal_http_responses_GenericMessage'
         "422":
           description: Unprocessable Entity
           schema:
@@ -243,7 +250,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/VEDA95_open_board_api_internal_http_responses.OkResponse-VEDA95_open_board_api_internal_auth_LocalUserLogin'
+            $ref: '#/definitions/VEDA95_open_board_api_internal_http_responses.OkResponse-VEDA95_open_board_api_internal_http_responses_GenericMessage'
         "422":
           description: Unprocessable Entity
           schema:
